[gd_scene load_steps=5 format=2]

[ext_resource path="res://Top Down Shooter Assets/weapons/shoot/4.png" type="Texture" id=1]
[ext_resource path="res://bullet.gd" type="Script" id=2]
[ext_resource path="res://Top Down Shooter Assets/sounds/shoot-2.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.51353
height = 6.26495

[node name="Bullet" type="RigidBody2D"]
collision_layer = 2
collision_mask = 8
gravity_scale = 0.0
script = ExtResource( 2 )
SPEED = 571

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="GunSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -17.155

[node name="GunHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GunHitbox"]
position = Vector2( 3.00678, -0.111362 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.160261, 0.111362 )
scale = Vector2( 1.28397, 0.632504 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="area_entered" from="GunHitbox" to="." method="_on_GunHitbox_area_entered"]
[connection signal="area_entered" from="GunHitbox" to="." method="_on_Area2D_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
